<resources>
    <string name="app_name">PaperLaunch</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_edit_folder">EditFolderActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="folder_settings_add_title">Create&#8230;</string>
    <string name="folder_settings_add_app">App</string>
    <string name="folder_settings_add_app_activities">Activities</string>
    <string name="folder_settings_add_app_shortcuts">Shortcuts</string>
    <string name="folder_settings_add_folder">Folder</string>
    <string name="folder_settings_add_url">Url</string>

    <string name="fragment_edit_folder_name">Name:</string>
    <string name="fragment_edit_folder_new_folder_name">New Folder</string>

    <string name="launcher_virtual_folder_name">more&#8230;</string>

    <string name="notification_pause">Pause</string>
    <string name="notification_play">Start</string>
    <string name="notification_content_active">PaperLaunch running</string>
    <string name="notification_content_inactive">PaperLaunch paused</string>

    <string name="fragment_edit_folder_empty_hint">To add entries to this folder use the \'+\' button.</string>
    <string name="fragment_settings_category_activation_title">Activation</string>
    <string name="fragment_settings_activation_sensitivity_title">Sensitivity</string>
    <string name="fragment_settings_activation_offset_height_title">Height</string>
    <string name="fragment_settings_activation_offset_position_title">Position</string>
    <string name="fragment_settings_appearance_background_title">Show background</string>
    <string name="fragment_settings_category_appearance_title">Appearance</string>
    <string name="fragment_settings_appearance_background_summary_on">Background is shown</string>
    <string name="fragment_settings_appearance_background_summary_off">Background is not shown</string>
    <string name="fragment_settings_activation_vibrate_on_activation_title">Vibrate on activation</string>
    <string name="fragment_settings_activation_vibrate_on_activation_summary_on">PaperLaunch vibrates on activation</string>
    <string name="fragment_settings_activation_vibrate_on_activation_summary_off">PaperLaunch doesn\'t vibrate on activation</string>
    <string name="fragment_settings_appearance_side_optionleft">Left</string>
    <string name="fragment_settings_appearance_side_optionright">Right</string>
    <string name="fragment_settings_appearance_side_optionright_summary">PaperLaunch gets activated from the right</string>
    <string name="fragment_settings_appearance_side_optionleft_summary">PaperLaunch gets activated from the left</string>
    <string name="fragment_settings_appearance_side_title">Activation side</string>
    <string name="activity_about_copyright">(c) 2017 by Devmil Solutions</string>
    <string name="activity_about_opensource_headline">Open source licenses</string>
    <string name="common__intentselectorgroup_text_default">Group</string>
    <string name="common__intentselectoritem_text_default">Item</string>
    <string name="common__intentselectorgroup_activityName_default">Activity</string>
    <string name="common__intentselectorview_chkshowall_text">Show all</string>
    <string name="activity_license_info_entry_image_content_description">Entry image</string>
    <string name="common__intentselectorgroup_img_content_description">Intent group image</string>
    <string name="feature_image_content_description">PaperLaunch feature image</string>
    <string name="fragment_edit_folder_entries_handle_content_description">Entry drag and drop handle</string>
    <string name="fragment_edit_folder_entries_image_content_description">Entry image</string>
    <string name="fragment_edit_folder_entries_details_content_description">Open entry details</string>
    <string name="fragment_edit_folder_entries_delete_content_description">Delete entry</string>
    <string name="fragment_edit_folder_editname_text_hint">Folder name</string>
    <string name="folder_settings_add_folder_maxdepth_alert_title">Maximal depth reached</string>
    <string name="folder_settings_add_folder_maxdepth_alert_message">The maximal depth has been reached. No more subfolders possible!</string>
    <string name="folder_settings_add_folder_maxdepth_alert_OK">OK</string>
    <string name="fragment_settings_appearance_gravity_optiontop">Top</string>
    <string name="fragment_settings_appearance_gravity_optioncenter">Center</string>
    <string name="fragment_settings_appearance_gravity_optionbottom">Bottom</string>
    <string name="fragment_settings_appearance_gravity_title">Alignment</string>
    <string name="fragment_settings_appearance_gravity_optiontop_summary">Entries are top-aligned</string>
    <string name="fragment_settings_appearance_gravity_optioncenter_summary">Entries are center-aligned</string>
    <string name="fragment_settings_appearance_gravity_optionbottom_summary">Entries are bottom-aligned</string>

    <string name="permission_request_title">Permission request</string>
    <string name="permission_request_description">PaperLaunch needs the permission to draw over system UI in order to function properly. If you see this message even after setting this permission please try to restart PaperLaunch (this can happen due to an Android Oreo bug)</string>
    <string name="permission_request_button_ok">OK</string>
    <string name="activity_urlselectorview_lbl_url">Enter the URL that shall be opened when this item is selected</string>
    <string name="activity_urlselectorview_edit_hint_url">Enter URL (e.g. https://www.google.de)</string>
    <string name="activity_urlselectorview_btn_OK_text">OK</string>
    <string name="activity_intentselector_label">Select an Intent</string>
    <string name="activity_urlselector_label">Enter an URL</string>
    <string name="activity_urlselectorview_lbl_name">Enter a name that describes this URL. This name will be displayed in PaperLaunch. Leave empty to get the URL as a name</string>
    <string name="activity_urlselectorview_edit_hint_name">Name (e.g. Google)</string>
    <string name="fragment_settings_appearance_item_scale_title">Entry scale</string>
    <string name="fragment_settings_activation_show_logo_title">Show logo</string>
    <string name="fragment_settings_activation_show_logo_summary_on">Logo is shown</string>
    <string name="fragment_settings_activation_show_logo_summary_off">Logo is not shown</string>
    <string name="folder_settings_add_cancel">Cancel</string>
    <string name="title_activity_edit_setting">Choose Action</string>
    <string name="activity_edit_setting_explanation_txt">This Action is able to activate or deactivate PaperLaunch. Please choose what this action should do</string>
    <string name="activity_edit_setting_rbEnable">Enable PaperLaunch</string>
    <string name="activity_edit_setting_rbDisable">Disable PaperLaunch</string>
    <string name="activity_edit_setting_btn_ok">OK</string>
    <string name="activity_edit_setting_description_enable">Activate</string>
    <string name="activity_edit_setting_description_disable">Pause</string>
    <string name="activity_edit_setting_new_paperlaunch_state">New PaperLaunch state:</string>
    <string name="fragment_settings_activation_show_hint_title">Show activation hint</string>
    <string name="fragment_settings_activation_show_hint_summary_on">Activation hint is shown</string>
    <string name="fragment_settings_activation_show_hint_summary_off">Activation hint is not shown</string>
    <string name="fragment_settings_category_backup_title">Backup &amp; Restore</string>
    <string name="fragment_settings_backup_export_title">Export Configuration</string>
    <string name="fragment_settings_backup_import_title">Import Configuration</string>
    <string name="fragment_settings_backup_export_success">Export successful</string>
    <string name="fragment_settings_backup_export_error">Export failed</string>
    <string name="fragment_settings_backup_import_success">Import successful</string>
    <string name="fragment_settings_backup_import_error">Import failed</string>
    <string name="fragment_settings_backup_import_warning_title">Overwrite Data?</string>
    <string name="fragment_settings_backup_import_warning_message">This will overwrite your current configuration. Are you sure?</string>
    <string name="activity_intentselector_title_count">Select App (%d)</string>
</resources>
