<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/activity_urlselectorview_toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_urlselectorview_lbl_name"/>
        <EditText
            android:id="@+id/activity_urlselectorview_edit_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/activity_urlselectorview_edit_hint_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_urlselectorview_lbl_url"/>
        <EditText
            android:id="@+id/activity_urlselectorview_edit_url"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/activity_urlselectorview_edit_hint_url"/>
        <Button
            android:id="@+id/activity_urlselectorview_btn_OK"
            android:text="@string/activity_urlselectorview_btn_OK_text"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>