<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_edit_folder_entries_container"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:clickable="true"
    android:focusable="true"
    android:elevation="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:background="@drawable/fragment_edit_folder_entries_background">

    <ImageView
        android:id="@+id/fragment_edit_folder_entries_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.5"
        android:src="@mipmap/ic_reorder_grey600_24dp"
        android:contentDescription="@string/fragment_edit_folder_entries_handle_content_description"/>

    <ImageView
        android:id="@+id/fragment_edit_folder_entries_image"
        android:clickable="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fragment_edit_folder_entries_image_content_description"/>
    <TextView
        android:id="@+id/fragment_edit_folder_entries_text"
        android:clickable="false"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/fragment_edit_folder_entries_details"
        android:clickable="false"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:src="@mipmap/ic_mode_edit_grey600_24dp"
        android:contentDescription="@string/fragment_edit_folder_entries_details_content_description"/>

    <ImageView
        android:id="@+id/fragment_edit_folder_entries_delete"
        android:clickable="true"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:src="@mipmap/ic_delete_grey600_24dp"
        android:contentDescription="@string/fragment_edit_folder_entries_delete_content_description"/>

</LinearLayout>